package PresentationLayer.Helpers;

public class FormStatus {
    public static  final int Create =0;
    public static  final int Edit =1;
}
